# com-croftsoft-app-life

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  package-lock.json  package.json  rustfmt.toml  webpack.config.js
src/: lib.rs
src/components/: mod.rs
src/components/canvas/: mod.rs
src/components/frame_rate/: mod.rs
src/components/life/: mod.rs
src/components/pause/: mod.rs
src/components/reset/: mod.rs
src/components/root/: mod.rs
src/components/speed/: mod.rs
src/constants/: mod.rs
src/engine/: mod.rs
src/engine/configuration/: mod.rs
src/engine/frame_rater/: mod.rs
src/engine/functions/: mod.rs
src/engine/functions/location/: mod.rs
src/engine/functions/web_sys/: mod.rs
src/engine/input/: mod.rs
src/engine/looper/: mod.rs
src/engine/metronome/: mod.rs  simple.rs  updater.rs
src/engine/traits/: mod.rs
src/engine/update_timer/: mod.rs
src/messages/: mod.rs
src/messages/events/: mod.rs
src/messages/inputs/: mod.rs
src/models/: mod.rs
src/models/cells/: mod.rs
src/models/clock/: mod.rs
src/models/frame_rate/: mod.rs
src/models/options/: mod.rs
src/models/overlay/: mod.rs
src/models/root/: mod.rs
src/models/world/: mod.rs
src/painters/: mod.rs
src/painters/background/: mod.rs
src/painters/cells/: mod.rs
src/painters/overlay/: mod.rs
src/painters/root/: mod.rs
src/painters/world/: mod.rs
src/updaters/: mod.rs
src/updaters/cells/: mod.rs
src/updaters/clock/: mod.rs
src/updaters/frame_rate/: mod.rs
src/updaters/frame_rater/: mod.rs
src/updaters/metronome/: mod.rs
src/updaters/options/: mod.rs
src/updaters/overlay/: mod.rs
src/updaters/root/: mod.rs
src/updaters/update_timer/: mod.rs
src/updaters/world/: mod.rs
static/: index.html  stylesheet.css
