[package]
authors = ["David Wallace Croft <david@croftsoft.com>"]
categories = ["games", "simulation"]
description = "Conway's Game of Life"
edition = "2021"
homepage = "https://www.croftsoft.com/"
keywords = ["rust", "wasm"]
license = "MIT"
name = "com-croftsoft-app-life"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-life"
version = "0.4.1"

[dependencies]
anyhow = "1.0.72"
com-croftsoft-lib-animation = "0.0.6"
com-croftsoft-lib-role = "0.3.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.getrandom]
features = [
  "js",
]
version = "0.2.10"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlInputElement",
  "MouseEvent",
  "Performance",
  "Window",
  "console",
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
